--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -86,7 +86,6 @@
   
   }
 
-
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -134,6 +133,7 @@ body {
 /* Scrollbar Styles */
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
   scrollbar-width: thin;
   scrollbar-color: var(--dark-slate) var(--dark-navy);
 }
