testing new img loader opts

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -42,12 +42,12 @@
   --card-border-rgb: 131, 134, 135;
 
   // My preset vars
-  --dark-navy: rgb(34, 34, 132);
+  --dark-navy: rgb(35, 35, 114);
   --navy: navy;
   --light-navy: rgb(27, 27, 100);
   --featured-card: rgb(34, 34, 71);
   --slate:  #9aa5c7;
-  --dark-slate: #4a5670;
+  --dark-slate: #576686;
   --light-slate: #a8b2d1;
   --light-blue: rgb(143, 212, 235);
 
