--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -27,7 +27,7 @@
     h2{
         margin: 0;
         font-size: clamp(40px, 8vw, 75px);
-        color: var(--slate);
+        color: var(--light-slate);
         font-family: var(--font-sans);
         font-weight: 400;
     }
