--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -76,6 +76,7 @@
                   a {
                     padding: 12px;
                     display: flex;
+                    color: var(--light-slate);
 
                     .number{
                         color: var(--green);
