--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -47,7 +47,7 @@
   --light-navy: rgb(27, 27, 100);
   --featured-card: rgb(34, 34, 71);
   --slate:  #9aa5c7;
-  --dark-slate: #576686;
+  --dark-slate: #5b6a8c;
   --light-slate: #a8b2d1;
   --light-blue: rgb(143, 212, 235);
 
