--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -24,6 +24,7 @@
             font-size: clamp(30px, 5vw, 42px);
             font-weight: 400;
             font-family: var(--font-sans);
+            color: var(--light-slate);
         }
     }
 }
@@ -63,7 +64,7 @@
     position: relative;
     padding: 2rem 1.75rem;
     border-radius: 8px;
-    color: var(--main-color);
+    color: var(--light-slate);
     background-color: var(--light-navy);
     overflow: auto;
     cursor: pointer;
@@ -122,7 +123,7 @@
 
     .desc{
         display: inline-block;
-        color: var(--light-slate);
+        color: var(--slate);
         font-size: 16px;
         padding: 10px 0 2px;
     }
@@ -138,7 +139,8 @@
         list-style: none;
 
         .techName{
-            font-family: var(--font-sans);
+            font-family: var(--font-mono);
+            color: var(--slate);
             font-size: 14px;
             margin-right: 16px;
         }
@@ -156,9 +158,7 @@
     text-decoration: none;
     cursor: pointer;
     transition: var(--transition);
-    &:hover,
-    &:focus,
-    &:active {
+    &:hover {
       background-color: var(--green-tint);
       outline: none;
     }
