--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -27,6 +27,7 @@
       .sm-title {
         font-family: var(--font-sans);
         font-size: clamp(var(--fs-lg), 3vw, var(--fs-xxl));
+        color: var(--light-slate);
       }
     }
 
@@ -62,7 +63,7 @@
         line-height: 1;
         text-decoration: none;
         cursor: pointer;
-        transition: var(--transition);
+        transition:  all 0.12s cubic-bezier(0.645, 0.045, 0.355, 1);
 
         &:hover,
         &:focus,
