--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -49,7 +49,7 @@
                     }
                 
                 svg {
-                    transition: var(--transition);
+                    transition:  all 0.12s cubic-bezier(0.645, 0.045, 0.355, 1);
                     user-select: none;
                     fill: var(--green);
                 }
@@ -99,7 +99,7 @@
                 line-height: 1;
                 text-decoration: none;
                 cursor: pointer;
-                transition: var(--transition);
+                transition:  all 0.12s cubic-bezier(0.645, 0.045, 0.355, 1);
 
                 &:hover,
                 &:focus,
