--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -157,7 +157,7 @@
     line-height: 1;
     text-decoration: none;
     cursor: pointer;
-    transition: var(--transition);
+    transition:  all 0.12s cubic-bezier(0.645, 0.045, 0.355, 1);
     &:hover {
       background-color: var(--green-tint);
       outline: none;
