--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -38,7 +38,9 @@
     }
 
     @media only screen and (max-width: 912px) and (orientation: portrait),
-    only screen and (max-width: 650px) and (orientation: landscape) {
+    only screen and (max-width: 650px) and (orientation: landscape),
+    (max-width: 800px)
+    {
         display: none;
     }
 }
