--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -50,7 +50,12 @@
 
     @media (max-width: 1080px) {
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      }
+    }
+    @media only screen and (max-width: 414px) 
+    {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
 }
 
 .projectTile{
