--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -41,14 +41,16 @@
                 color: var(--green);
                 width: 34px;
                 height: 34px;
+                -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
                 
                 &:hover {
                     svg {
                         fill: var(--green-tint);
-                        }
                     }
+                }
                 
                 svg {
+                    -webkit-tap-highlight-color:  rgba(255, 255, 255, 0);
                     transition:  all 0.12s cubic-bezier(0.645, 0.045, 0.355, 1);
                     user-select: none;
                     fill: var(--green);
