--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -50,6 +50,9 @@
   --dark-slate: #5b6a8c;
   --light-slate: #a8b2d1;
   --light-blue: rgb(143, 212, 235);
+  --box-shadow: rgba(3, 17, 38, 0.545);
+  --logo-fill: rgb(190, 196, 71);
+  --logo-tinted: rgb(145, 149, 65);
 
   --blue: rgb(36, 36, 255);
   // --green: rgb(42, 202, 128);
