--- a/styles/Featured.module.scss
+++ b/styles/Featured.module.scss
@@ -91,7 +91,7 @@ section.main{
                 margin-bottom: 30px;
             }
         }
-        &:nth-of-type(odd) {
+        &:nth-of-type(even) {
             .project-content {
               grid-column: 7 / -1;
               text-align: right;
